@@ -1,3 +1,9 @@
+2008-08-26 Jens Tkotz <jens@peino.de> 1.5.9-svn-b9
+
+ * Change: Show links for comments overview only of there are comments.
+
+ * Fix: Increased check level for comments overview.
+
 2008-08-26 Jens Tkotz <jens@peino.de> 1.5.9-svn-b8
 
  * Fix: Password strengthmeter in setup broke change or
